--- a/templates/home.html
+++ b/templates/home.html
@@ -62,6 +62,8 @@
                 type="submit">
             Calculate
         </button>
+
+        <a href="/graph">View Graph</a>
     </form>
 </div>
 </body>
