change to use current variable name for results.html and displays them

--- a/templates/results.html
+++ b/templates/results.html
@@ -75,7 +75,7 @@
     <script>
         var trace1 = {
             x: ['Transportation', 'Food', 'Energy'],
-            y: [{{total_transportation}}, {{total_food}}, {{total_energy}}],
+            y: [{{transportation_footprint}}, {{food_footprint}}, {{home_energy_footprint}}],
             type: 'bar'
         };
 
